[package]
name = "md-link-check"
version = "0.1.0"
authors = ["Radek Krahl <radek@krahl.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }
