[package]
name = "md-link-check"
version = "0.1.1"
authors = ["Radek Krahl <radek@krahl.pl>"]
description = "Check for broken links in md documents"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
ureq = { version = "2.5.0" }
console = "0.15.2"
clap = { version = "4.0.26", features = ["derive"] }

