[package]
name = "md-link-check"
version = "0.1.2"
authors = ["Radek Krahl <radek@krahl.pl>"]
description = "Check for broken links in md documents"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.2"
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["simd"] }
ureq = { version = "2.12.1" }
console = "0.15.10"
clap = { version = "4.5.23", features = ["derive"] }

